project/test/semantics/good/input/Good29_shouldDiscardEnvironmentChangesFromMemberActionCalls.ty
singleton class SystemTest {
    
    actions: {
        someAction: () -> Void = Pass
        
        otherAction: (x: Int) -> Int = {
            Pass
            2 * x
        }
        
        main: () -> Void = {
            System#print(3)
            val result: Int = this#otherAction(8);
            System#assertEquals(16, result)
        }
    }
}
