project/test/semantics/bad/input/Bad72_shouldCheckPredicateTypeInWhile.ty
singleton class Loops {
    
    actions: {
        main: () -> Void = {
            while (2) { // UnexpectedTypeError
                Pass
            }
        }
    }
}
